--- a/samples/src/classes/SF45_WorkPartSelectorIntTest.cls
+++ b/samples/src/classes/SF45_WorkPartSelectorIntTest.cls
@@ -1,6 +1,6 @@
 @isTest
 private class SF45_WorkPartSelectorIntTest {
-	private static final User TestRunner = F45_FTY_RunAsUserFactory.create(); 
+	private static final User TestRunner = F45_FTY_TestUserFactory.createTestRunner(); 
 	
 	@isTest static void testSelectByMaintenanceRequestIdWithEquipmentShouldIncludeEquipment(){
 		// Arrange
