--- a/src/classes/F45_SEL_UserRoleSelector.cls
+++ b/src/classes/F45_SEL_UserRoleSelector.cls
@@ -1,6 +1,5 @@
-@isTest
-public with sharing class F45_SEL_UserRoleSelector {
-    public List<UserRole> selectAll() {
+public with sharing virtual class F45_SEL_UserRoleSelector {
+    public virtual List<UserRole> selectAll() {
     	return [ 
     		SELECT id, name
     		FROM UserRole
