--- a/src/classes/F45_SEL_ProfileSelectorMock.cls
+++ b/src/classes/F45_SEL_ProfileSelectorMock.cls
@@ -1,3 +1,4 @@
+@isTest
 public with sharing class F45_SEL_ProfileSelectorMock extends F45_SEL_ProfileSelector {
 	List<Profile> expectedProfileList;
 	
