Updated samples to align to lib

--- a/samples/src/classes/F45_DML_UndeleteResultWrapper.cls
+++ b/samples/src/classes/F45_DML_UndeleteResultWrapper.cls
@@ -1,4 +1,4 @@
-public with sharing class F45_DML_UndeleteResultWrapper implements F45_DML_GenericResultWrapperIntf {
+public with sharing class F45_DML_UndeleteResultWrapper implements F45_DML_ResultWrapperIntf {
 	@testVisible private Id id;
 	@testVisible private Boolean wasSuccess;
 	@testVisible private List<F45_DML_DatabaseErrorWrapper> errorList; 
@@ -6,12 +6,7 @@ public with sharing class F45_DML_UndeleteResultWrapper implements F45_DML_Gener
     public F45_DML_UndeleteResultWrapper(Database.UndeleteResult result) {
     	this.id = result.id;
     	this.wasSuccess = result.isSuccess();
-    	for (Database.Error error : result.errors) {
-    		if (errorList == null) {
-    			errorList = new List<F45_DML_DatabaseErrorWrapper>();
-    		}
-    		errorList.add(new F45_DML_DatabaseErrorWrapper(error));
-    	}
+    	this.errorList = (new F45_DML_DatabaseErrorHelper()).convert(result.errors);
     } 
     
     @testVisible() 
