--- a/samples/src/classes/F45_DML_UpsertResultWrapper.cls
+++ b/samples/src/classes/F45_DML_UpsertResultWrapper.cls
@@ -1,4 +1,4 @@
-public with sharing class F45_DML_UpsertResultWrapper implements F45_DML_GenericResultWrapperIntf {
+public with sharing class F45_DML_UpsertResultWrapper implements F45_DML_ResultWrapperIntf {
 	@testVisible private Id id;
 	@testVisible private Boolean wasSuccess;
 	@testVisible private Boolean wasCreated;
@@ -6,13 +6,9 @@ public with sharing class F45_DML_UpsertResultWrapper implements F45_DML_Generic
 	
     public F45_DML_UpsertResultWrapper(Database.UpsertResult result) {
     	this.id = result.id;
+    	this.wasCreated = result.isCreated();
     	this.wasSuccess = result.isSuccess();
-    	for (Database.Error error : result.errors) {
-    		if (errorList == null) {
-    			errorList = new List<F45_DML_DatabaseErrorWrapper>();
-    		}
-    		errorList.add(new F45_DML_DatabaseErrorWrapper(error));
-    	}
+    	this.errorList = (new F45_DML_DatabaseErrorHelper()).convert(result.errors);
     } 
     
     @testVisible() 
