--- a/samples/src/classes/F45_CM_UserRoleCache.cls
+++ b/samples/src/classes/F45_CM_UserRoleCache.cls
@@ -1,16 +1,27 @@
 @isTest
 public with sharing class F45_CM_UserRoleCache {
     private static Map<String, UserRole> userRoleByNameMap;
+
+	F45_SEL_UserRoleSelector selector;
+	
+	public F45_CM_UserRoleCache(F45_SEL_UserRoleSelector selector) {
+		this.selector = selector;
+	}
+	
+	public F45_CM_UserRoleCache() {
+		this.selector = new F45_SEL_UserRoleSelector();
+	}
     
-    public static UserRole getByName(String name){
-    	if (userRoleByNameMap == null) {
-    		userRoleByNameMap = loaduserRoleByNameMap();
+    public UserRole getByName(String name){
+    	if (userRoleByNameMap == null || userRoleByNameMap.get(name) == null) {
+    		userRoleByNameMap = buildUserRoleByNameMap();
     	}
     	return userRoleByNameMap.get(name);
     }
     
-    private static Map<String, UserRole> loaduserRoleByNameMap() {
-    	List<UserRole> userRoleList = (new F45_SEL_UserRoleSelector()).selectAll();
+    @testVisible
+    private Map<String, UserRole> buildUserRoleByNameMap() {
+    	List<UserRole> userRoleList = this.selector.selectAll();
     	userRoleByNameMap = new Map<String, UserRole>();
     	for (UserRole UserRole : userRoleList) {
     		userRoleByNameMap.put(UserRole.name, UserRole);
