--- a/samples/src/classes/F45_FTY_TestUserFactory.cls
+++ b/samples/src/classes/F45_FTY_TestUserFactory.cls
@@ -1,12 +1,15 @@
 @isTest 
 public class F45_FTY_TestUserFactory extends F45_FTY_SObjectFactory {
+	public static final F45_CM_ProfileCache profileCache = new F45_CM_ProfileCache();
+	public static final F45_CM_UserRoleCache userRole = new F45_CM_UserRoleCache();
+	
 	public static final String DEFAULT_USER_PROFILE = 'Standard User';
 	public static final String ADMNISTRATOR_PROFILE = 'System Administrator';
 	public static final String DEFAULT_USER_ROLE = 'CEO';
 	
 	private static final Map<String, Object> DEFAULT_VALUES_BY_FIELD_MAP = new Map<String, Object>{
-		'ProfileId' => F45_CM_ProfileCache.getByName(DEFAULT_USER_PROFILE).id,
-		'UserRoleId' => F45_CM_UserRoleCache.getByName(DEFAULT_USER_ROLE).id,
+		'ProfileId' => profileCache.getByName(DEFAULT_USER_PROFILE).id,
+		'UserRoleId' => userRole.getByName(DEFAULT_USER_ROLE).id,
         'EmailEncodingKey' => 'UTF-8',
         'LanguageLocaleKey' => 'en_US',
         'LocaleSidKey' => 'en_US',
@@ -24,8 +27,8 @@ public class F45_FTY_TestUserFactory extends F45_FTY_SObjectFactory {
         System.runAs ( originalAdmin ) {
             User testRunUser = new User(
                  lastName          = testerName,
-                 ProfileId         = F45_CM_ProfileCache.getByName(testerProfileString).id,
-                 UserRoleId        = F45_CM_UserRoleCache.getByName(testerRoleString).id
+                 ProfileId         = profileCache.getByName(testerProfileString).id,
+                 UserRoleId        = userRole.getByName(testerRoleString).id
             );
             return create(testRunUser, F45_FTY_RecordInsertMode.REAL);
         }
