--- a/samples/src/classes/F45_SEL_ProfileSelector.cls
+++ b/samples/src/classes/F45_SEL_ProfileSelector.cls
@@ -1,6 +1,5 @@
-@isTest
-public with sharing class F45_SEL_ProfileSelector {
-    public List<Profile> selectAll() {
+public with sharing virtual class F45_SEL_ProfileSelector {
+    public virtual List<Profile> selectAll() {
     	return [ 
     		SELECT id, name
     		FROM Profile
