--- a/samples/src/classes/F45_DML_DatabaseErrorHelper.cls
+++ b/samples/src/classes/F45_DML_DatabaseErrorHelper.cls
@@ -1,12 +1,10 @@
 public with sharing class F45_DML_DatabaseErrorHelper {
     public List<F45_DML_DatabaseErrorWrapper> convert(List<Database.Error> errorList) {
-    	if (errorList == null) {
-    		return null;
-    	}
-    	
     	List<F45_DML_DatabaseErrorWrapper> wrapperList = new List<F45_DML_DatabaseErrorWrapper>();
-    	for (Database.Error error : errorList) {
-    		wrapperList.add(new F45_DML_DatabaseErrorWrapper(error));
+    	if (errorList != null) {
+	    	for (Database.Error error : errorList) {
+	    		wrapperList.add(new F45_DML_DatabaseErrorWrapper(error));
+	    	}
     	}
 		return wrapperList;	    	 
     }
