--- a/src/classes/F45_FTY_SObjectFactory_PerTemplateTests.cls
+++ b/src/classes/F45_FTY_SObjectFactory_PerTemplateTests.cls
@@ -1,11 +1,10 @@
 @isTest
-public with sharing class F45_FTY_SObjectFactory_InQuantityTests {
+public with sharing class F45_FTY_SObjectFactory_PerTemplateTests {
 	private static final User TEST_RUNNER = F45_FTY_TestUserFactory.createTestRunner();
 	
 	private static final User STRATEGY_TEMPLATE = F45_FTY_TestUserFactory.create(F45_FTY_RecordInsertMode.NONE);
-	private static final Integer STRATEGY_QUANTITY = 1;
-	private static final F45_FTY_SObjectFactory.SObjectInQuantityStrategy STRATEGY_UNDER_TEST 
-		= new F45_FTY_SObjectFactory.SObjectInQuantityStrategy(STRATEGY_TEMPLATE, STRATEGY_QUANTITY);
+	private static final F45_FTY_SObjectFactory.SObjectPerTemplateStrategy STRATEGY_UNDER_TEST 
+		= new F45_FTY_SObjectFactory.SObjectPerTemplateStrategy(new List<SObject>{STRATEGY_TEMPLATE});
 
     @isTest public static void testExecutsCreatesListOfSpecifiedSObjects() {
     	// Arrange
@@ -21,10 +20,10 @@ public with sharing class F45_FTY_SObjectFactory_InQuantityTests {
 
     	// Assert
     	System.assertEquals(sObjectList, resultList);
-    	System.assertEquals(STRATEGY_QUANTITY, resultList.size());
+    	System.assertEquals(1, resultList.size());
     	
     	User resultUser = (User) resultList[0];
-    	System.assert(resultUser.LastName.contains(F45_FTY_TestUserFactory.OTHER_USER_NAME_SEED));
+    	System.assert(resultUser.LastName.contains('User'));
     	System.assert(resultUser.Email.contains(F45_FTY_TestUserFactory.OTHER_USER_NAME_SEED));
     	System.assert(resultUser.Username.contains(F45_FTY_TestUserFactory.OTHER_USER_NAME_SEED));
     	System.assert(resultUser.CommunityNickname.contains(F45_FTY_TestUserFactory.OTHER_USER_NAME_SEED));
